unpackaged/main/default/objects/Insumo_de_Obra__c/Insumo_de_Obra__c.object-meta.xml
<CustomObject>
    <label>Insumo de Obra</label>
    <nameField>
        <label>Identificador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insumos de Obra</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>