unpackaged/main/default/objects/Insumo_de_Obra__c/fields/Insumo_Buscar__c.field-meta.xml
<CustomField>
    <fullName>Insumo_Buscar__c</fullName>
    <label>Insumo</label>
    <referenceTo>Insumo__c</referenceTo>
    <relationshipLabel>Insumos de Obra</relationshipLabel>
    <relationshipName>Insumos_de_Obra</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>