unpackaged/main/default/objects/Insumo_de_Obra__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <label>No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>