unpackaged/main/default/objects/Insumo_de_Obra__c/fields/SubCategoria__c.field-meta.xml
<CustomField>
    <fullName>SubCategoria__c</fullName>
    <label>SubCategoria</label>
    <length>100</length>
    <type>Text</type>
</CustomField>