unpackaged/main/default/objects/Insumo_de_Obra__c/fields/UnidadMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadMedida__c</fullName>
    <label>UnidadMedida</label>
    <length>100</length>
    <type>Text</type>
</CustomField>